--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <relativePath>../jitsi-universe/pom.xml</relativePath>
   </parent>
 
-  <artifactId>jitsi-libjitsi-protocol</artifactId>
+  <artifactId>libjitsi-protocol</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
