--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
   <parent>
     <groupId>org.jitsi</groupId>
     <artifactId>jitsi-universe</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <relativePath>../jitsi-universe/pom.xml</relativePath>
+    <version>1.0-20160202.203332-11</version>
   </parent>
 
   <artifactId>libjitsi-protocol</artifactId>
@@ -35,18 +34,22 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>jitsi-configuration</artifactId>
+      <version>2.9-20150723.181638-1</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>jitsi-protocol</artifactId>
+      <version>2.9-20151211.202410-3</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>jitsi-protocol-jabber</artifactId>
+      <version>2.9-20151214.211356-5</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>jitsi-util</artifactId>
+      <version>2.9-20150723.181654-1</version>
     </dependency>
   </dependencies>
 
